gcc/testsuite/gdc.test/compilable/imports/test50a.d
module imports.test50a;

class Foo {
        protected int a;
}
