gcc/testsuite/gdc.test/fail_compilation/imports/ice21060b/package.d
module imports.ice21060d;

struct P21060
{
}
